<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MoPub Sample App</string>
    <string name="keywords">Keywords (optional)</string>
    <string name="load_ad">Load Ad</string>
    <string name="refresh_ad">Refresh Ad</string>
    <string name="switch_layout">Switch Layout</string>
    <string name="show_ad">Show Ad</string>
    <string name="native_icon_image">native_icon_image</string>
    <string name="native_main_image">native_main_image</string>
    <string name="native_daa_icon_image">DAA icon image</string>
    <string name="learn_more">Learn More</string>
    <string name="save">Save Ad Unit</string>
    <string name="ad_unit_id">Ad Unit Id:</string>
    <string name="ad_unit_hint">Enter Ad Unit Id</string>
    <string name="ad_unit_name">Name:</string>
    <string name="ad_unit_name_hint">Enter Name</string>
    <string name="ad_type">Ad Type:</string>
    <string name="add_ad_unit_title">Add an Ad Unit</string>
    <string name="add_ad_unit_button">Add an Ad Unit</string>
    <string name="ad_unit_id_banner">b195f8dd8ded45fe847ad89ed1d016da</string>
    <string name="ad_unit_id_mrect">252412d5e9364a05ab77d9396346d73d</string>
    <string name="ad_unit_id_interstitial">24534e1901884e398f1253216226017e</string>
    <string name="ad_unit_id_native">11a17b188668469fb0412708c3d16813</string>
    <string name="swipe_text"><![CDATA[< Swipe Left & Right >]]></string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="bannerButton">Banner</string>
    <string name="interstitialButton">Interstitial</string>
    <string name="nativeButton">Native</string>
    <string name="rewardedVideoButton">Rewarded Video</string>
    <string name="adUnitTextView">Ad Unit ID:</string>
    <string name="network_ad_unit_hint">Type network ad unit here</string>
    <string name="go_button">GO</string>

<!-- Banner Detail Fragment Strings -->
    <string name="bannerLoaded">onBannerLoaded</string>
    <string name="bannerFailed">onBannerFailed</string>
    <string name="bannerClicked">onBannerClicked</string>
    <string name="bannerExpanded">onBannerExpanded</string>
    <string name="bannerCollapsed">onBannerCollapsed</string>

<!--Interstitial Detail Fragment Strings-->
    <string name="interstitialLoaded">onInterstitialLoaded</string>
    <string name="interstitialFailed">onInterstitialFailed</string>
    <string name="interstitialShown">onInterstitialShown</string>
    <string name="interstitialClicked">onInterstitialClicked</string>
    <string name="interstitialDismissed">onInterstitialDismissed</string>

<!--Rewarded Video Detail Fragment Strings (in interstitial_detail_fragment)-->
    <string name="rvLoadSuccess">onRewardedVideoLoadSuccess</string>
    <string name="rvLoadFailure">onRewardedVideoLoadFailure</string>
    <string name="rvStarted">onRewardedVideoStarted</string>
    <string name="rvPlaybackError">onRewardedVideoPlaybackError</string>
    <string name="rvClosed">onRewardedVideoClosed</string>
    <string name="rvCompleted">onRewardedVideoCompleted</string>

</resources>
