<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="wrap_content" tools:context="com.mopub.simpleadsdemo.MediationHome">

    <!-- TODO: Update blank relative layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/adUnitTextView"
        android:id="@+id/adUnitTextView"
        android:textSize="22sp"
        android:textColor="#000000"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bannerButton"
        android:id="@+id/bannerButton"
        android:layout_below="@+id/adUnitTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_marginRight="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:textColor="#80ffffff"
        android:background="#ac0f8d10"
        android:layout_marginTop="8dp"
        android:textSize="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interstitialButton"
        android:id="@+id/interstitialButton"
        android:layout_below="@+id/bannerButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_marginRight="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:textColor="#80ffffff"
        android:background="#c714888c"
        android:layout_marginTop="8dp"
        android:textSize="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nativeButton"
        android:id="@+id/nativeButton"
        android:layout_below="@+id/interstitialButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_marginRight="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:textColor="#80ffffff"
        android:background="#acafb021"
        android:layout_marginTop="8dp"
        android:textSize="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rewardedVideoButton"
        android:id="@+id/rewardedVideoButton"
        android:layout_below="@+id/nativeButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_marginRight="24dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:textColor="#80ffffff"
        android:background="#b5aa3f00"
        android:layout_marginTop="8dp"
        android:textSize="20dp" />

    <EditText
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:id="@+id/adUnitId"
        android:layout_toRightOf="@id/adUnitTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:singleLine="true"
        android:hint="@string/network_ad_unit_hint"
        android:ellipsize="start"
        android:gravity="center_horizontal" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_button"
        android:id="@+id/button"
        android:layout_alignRight="@+id/rewardedVideoButton"
        android:layout_alignEnd="@+id/rewardedVideoButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp" />

</RelativeLayout>
